Fix (for now) layout of s1 header. Still not responsive. :/

--- a/src/s1/s1/static/stylesheets/scss/components/_s1_header.scss
+++ b/src/s1/s1/static/stylesheets/scss/components/_s1_header.scss
@@ -2,18 +2,6 @@
     @include rem(padding, 10px 0 17px);
 
     position: relative;
-
-    .s1-header-logo-link, .button,
-    .user-indicator, .button-group,
-    .s1-header-link {
-        @include rem(margin-right, 60px);
-    }
-
-    .button-group, .user-indicator {
-        .button {
-            margin-right: 0;
-        }
-    }
 }
 
 .s1-header-logo-link {
@@ -35,7 +23,13 @@
 }
 
 .s1-header-menu {
-    width: $s1-header-width;
-    margin: 0 auto;
+    // space for logo
+    @include rem(margin-left, 140px);
+    white-space: nowrap;
     text-align: center;
+    
+    > * {
+        // spacing between buttons
+        @include rem(margin-right, 10px);
+    }
 }
